--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
