--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/movie-recommendation
-spring.datasource.username=developer
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbmovies
+spring.datasource.username=postgres
 spring.datasource.password=developer
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
