--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.profiles.active=local
 spring.liquibase.change-log= classpath:db/changelog/changelog-master.xml
+spring:
+  security:
+    oauth2:
+        client:
+        registration:
+            google:
+                client-id: 665276458733-0vso7mh1slb6n6onn57fjeri1d63htv8.apps.googleusercontent.com
+                client-secret: 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
+                scope: openid,profile,email
+    resourceserver:
+        jwt:
+            issuer-uri: https://accounts.google.com
+            jwk-set-uri: https://www.googleapis.com/oauth2/v3/certs
