--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>movie-recommendation</name>
 	<description>2A6 group project of SE course </description>
 	<properties>
-<!--		<java.version>18</java.version>-->
+		<java.version>18</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -64,6 +64,13 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
