--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.profiles.active=local
 spring.liquibase.change-log= classpath:db/changelog/changelog-master.xml
+spring.main.allow-bean-definition-overriding=true
