--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.profiles.active=local
 spring.liquibase.change-log= classpath:db/changelog/changelog-master.xml
+spring.mail.host=smtp.gmx.com
+spring.mail.port=587
+spring.mail.username=movierecommendationa6@gmx.com
+spring.mail.password=filmetari123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 spring.main.allow-bean-definition-overriding=true
