--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,3 +6,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=movie.recommendation.ip
+spring.mail.password=password2022
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
