login with google

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -13,3 +13,9 @@ spring.mail.username=movie.recommendation.ip
 spring.mail.password=password2022
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+#Google OAuth2 Client configuration
+spring.security.oauth2.client.registration.google.client-id=254092251532-mfmbdc7h3vgni05mdsm9kmobe4k8upo3.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client.scope=https://www.googleapis.com/auth/userinfo.email,https://www.googleapis.com/auth/userinfo.profile
